# ImenKedir.github.io

./: .gitattributes  .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  snake-world-model.md
.github/workflows/: deploy.yml
artifacts/snake-world-model/: index.html  package.json
artifacts/snake-world-model/.replit-artifact/: artifact.toml
artifacts/snake-world-model/public/: world_model.json
artifacts/snake-world-model/scripts/: fixtures.json  verify.ts
artifacts/snake-world-model/src/: index.css
artifacts/snake-world-model/src/engine/: constants.ts  dream.ts  index.ts  model.ts  snake.ts  useSnakeWorldModel.ts
artifacts/snake-world-model/src/hooks/: use-swipe.ts
snake_world_model/: README.md  collect.py  device.py  dream.py  env.py  export_web.py  export_weights.py  model.py  play.py  test_env.py  train.py  transitions.pt  world_model_env.py
snake_world_model/experiments/: EXPERIMENT_LOG.md  EXPERIMENT_LOG_PART2.md  _cache.json  plot_web.py  results_2m_0.5x.json  results_2m_1x.json  results_2x2.json  results_3x3.json  results_fill_curve.json  results_scaling_data.json  results_surface.json  run_10m.py  run_2m.py  run_experiments.py  run_fill_curve.py  run_scaling_data.py  run_surface.py  world_model_2m_0.5x.pt
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.css
web/src/lib/: highlight.js
web/src/lib/snake/: env.ts  (+4 more)
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/static/model/: weights.json
web/static/world-model/: index.html
(+3 files in other folders)
