[project]
name = "snake-world-model"
version = "0.1.0"
description = "Tiny Snake world model: simulator, dataset collection, MLP training, scaling experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.4",
    "torch>=2.5",
]

# Scripts live under snake_world_model/; this repo is not packaged for PyPI.
[tool.uv]
package = false

# Replit/Linux CI: CPU-only wheels. macOS uses default PyPI torch (includes MPS/Metal).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
